# Arciumint

./: .gitignore  .replit  Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: deploy-anchor.yml  deploy-usernftcreator.yml
backend/: package-lock.json  package.json  sign.ts  wrangler.toml
client/: index.html  package-lock.json  package.json  vite.config.ts
client/idl/: arciumintnftgen.json
client/public/: generative.html  index.html
client/server/: server.js
client/src/: App.jsx  App.tsx  main.jsx  main.tsx
client/src/components/: ConnectWallet.tsx  GenerativeCanvas.tsx
client/src/pages/: CreateNFT.tsx  Home.jsx  Home.tsx  Mint.jsx  Mint.tsx  NFTDetail.jsx  NFTDetail.tsx  Profile.jsx  Profile.tsx  Upload.jsx  Upload.tsx  createNFT.css  home.css  profile.css  upload.css
client/src/services/: nftService.js  nftService.ts
client/src/styles/: theme.css
client/src/utils/: mintGenerativeNFT.ts  uploadToStorj.ts  wallet.ts
programs/arciumint-nft-gen/: Cargo.toml
programs/arciumint-nft-gen/src/: lib.rs  metadata.rs  mint_context.rs
programs/usernftcreator/: Cargo.toml
programs/usernftcreator/src/: lib.rs
server/: index.js
server/controllers/: nftController.js
server/routes/: nftRoutes.js
web/: package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/phantom/callback/: route.ts
web/app/phantom-callback/: page.jsx  page.tsx
web/components/: ClientWalletProvider.tsx  SolanaProvider.tsx  WalletButton.jsx  WalletButton.tsx  WalletConnectionProvider.jsx  WalletConnectionProvider.tsx
