[package]
name = "arciumintnftgen"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["token", "metadata", "associated_token"] }
mpl-token-metadata = { version = "5.1.1", default-features = false }
arcium = "0.2.0"

[features]
default = []
exclude-accounts = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[lib]
crate-type = ["cdylib"]
