[package]
name = "usernftcreator"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl  = { version = "0.31.1" }

[features]
default = []
idl-build = [
  "anchor-lang/idl-build",
  "anchor-spl/idl-build"
]

[lib]
crate-type = ["cdylib"]
